--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,1 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/console
-spring.datasource.url=jdbc:h2:file:/Users/jordanmruczynski/IdeaProjects/todo-app/tododb
-spring.jpa.hibernate.ddl-auto=create-drop
-task.allowmultiplefasksfromtemplate=false
-spring.main.banner-mode=off
+spring.h2.console.enabled=false
