--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.profiles.active=local
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
 spring.datasource.url=jdbc:h2:file:/Users/jordanmruczynski/IdeaProjects/todo-app/tododb
+task.template.allowMultipleTasks=false
